service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app-ns # تأكد إنه نفس الـ Namespace
spec:
  type: ClusterIP # التعديل هنا (وفرنا فلوس الـ LoadBalancer)
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 80         # البورت اللي الـ Ingress هيكلم السيرفس عليه
      targetPort: 5000 # بورت Flask الداخلي
