notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes-app-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: notes.hassan.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-app-service
            port:
              number: 80
